Blackpurl/src/objects/Unit_Sub_Model__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Model_Description__c</fullName>
        <label>Sub Model Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Model_Name__c</fullName>
        <label>Sub Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Model</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Unit Sub Models</relationshipLabel>
        <relationshipName>Unit_Sub_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIN_Code__c</fullName>
        <label>VIN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Unit Sub Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Unit_Model__c</columns>
        <columns>Active__c</columns>
        <columns>Sub_Model_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>USM-{0000000}</displayFormat>
        <label>Unit Sub Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Sub Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>